# mcu_client

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  create_gpio_result.json
.devcontainer/: devcontainer.json
client/src/: lib.rs
clients/movement_service_client/: Cargo.toml  build.rs
clients/movement_service_client/src/: default_transformers.rs  json_transformers.rs  lib.rs  proto_transformers.rs
clients/stepper_service_client/: Cargo.toml
clients/stepper_service_client/src/: default_transformers.rs  lib.rs
clients/uart_json_stepper_motor_service_client/: Cargo.toml
data/movement_data/: Cargo.toml
data/movement_data/src/: lib.rs  movement_data_types.rs  vector.rs
data/stepper_motor_data/: Cargo.toml
data/stepper_motor_data/src/: lib.rs
docker/: dev.dockerfile
g-code/: Cargo.toml
g-code/src/: lib.rs  parser.rs
g_code_processor/src/: parser.rs
gcode_processor/: Cargo.toml
gcode_processor/src/: lib.rs  parser.rs  tests.rs  vector_operations.rs
gcode_processor_app/: Cargo.toml
gcode_processor_app/resources/: config.json  holes.gcode  test.gcode
gcode_processor_app/src/: config.rs  config_provider.rs  configurer.rs  main.rs
include/: client.hpp  mcu_client.hpp  mcu_client_types.hpp  server_connection.hpp
ipc/: CMakeLists.txt  Cargo.toml
ipc/include/: linux_ipc_connection.hpp
ipc/src/: lib.rs  linux_ipc_connection.cpp  reader_builder.rs
ipc/src/reader_builder/: composed_ipc_reader.rs  reader_builder_tests.rs
ipc/tests/: CMakeLists.txt
ipc/tests/src/: ut_linux_ipc_connection.cpp
ipcs/file_raw_data_writer/: Cargo.toml
ipcs/file_raw_data_writer/src/: lib.rs
ipcs/proto_transformers/: Cargo.toml
ipcs/proto_transformers/src/: lib.rs
ipcs/uart/: Cargo.toml
ipcs/uart/src/: lib.rs
ipcs/uart_port/: Cargo.toml
ipcs/uart_port/src/: lib.rs
ipcs/uart_sized_package_reader_writer/: Cargo.toml
ipcs/uart_sized_package_reader_writer/src/: default_size_encoding.rs  lib.rs
src/: mcu_client_app.cpp
tasks/: create_gpio.json
uart-mcu-client/: Cargo.toml
uart-mcu-client/src/: lib.rs
uart_movement_client/: Cargo.toml
uart_movement_client/src/: main.rs
uart_stepper_client/: Cargo.toml
uart_stepper_client/src/: main.rs
util/: CMakeLists.txt
util/include/: gpi_proxy.hpp  gpio_data_generator.hpp  gpo_proxy.hpp  step_motor.hpp  uart.hpp  uart_connection.hpp
util/src/: step_motor.cpp  uart.cpp
util/tests/: CMakeLists.txt
util/tests/src/: ut_gpi_proxy.cpp  ut_gpo_proxy.cpp  ut_step_motor.cpp  ut_uart.cpp  ut_uart_connection.cpp
